@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-29T16:21:15Z",
-  "count_outdated" : 606,
-  "uniques_outdated" : 345,
-  "count" : 649,
-  "uniques" : 371,
+  "timestamp" : "2022-10-30T01:46:37Z",
+  "count_outdated" : 611,
+  "uniques_outdated" : 348,
+  "count" : 656,
+  "uniques" : 373,
   "clones" : [
-    {
-      "timestamp": "2022-10-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 5 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 3 ]
-    },
     {
       "timestamp": "2022-10-16T00:00:00Z",
       "count": 1,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-10-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
