@@ -1,12 +1,7 @@
 {
-  "count": 43,
+  "count": 45,
   "uniques": 12,
   "clones": [
-    {
-      "timestamp": "2022-10-15T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2022-10-16T00:00:00Z",
       "count": 1,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-10-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 5,
+      "uniques": 2
     }
   ]
 }
