@@ -1,3 +1,11 @@
+2022-10-30T01:46:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3353692745 # 981
+* notice: last 14d: unq all: 12 45
+* notice: prev accum: outdated-unq outdated-all / unq all: 345 606 / 371 649
+* notice: next accum: outdated-unq outdated-all / unq all: 348 611 / 373 656
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +5 -0 -0 / 2 5
+* notice: removed / changed dates: [2022-10-15] / [2022-10-29]
+
 2022-10-29T16:21:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3352123775 # 980
 * notice: last 14d: unq all: 12 43
